# mewgenics-save-editor

./: .gitignore  LICENSE  README.md  TECHNICAL.md  build_abilities_json.py  build_cli_game_data.py  build_furniture_json.py  build_items_json.py  build_mutations_json.py  game_data_common.py  main.py  mewgenics_cli.py  mewgenics_save_tool.py  parse_save.py  pyproject.toml  save_cli_core.py  setup.py
examples/: backup_and_modify.py  find_mutations.py
gamedata/abilities/: basic_attack.json  basic_move.json  butcher_active.json  butcher_passive.json  colorless_active.json  colorless_passive.json  disorder.json  druid_active.json  druid_passive.json  fighter_active.json  fighter_passive.json  hunter_active.json  hunter_passive.json  jester_active.json  jester_passive.json  mage_active.json  mage_passive.json  medic_active.json  medic_passive.json  monk_active.json  monk_passive.json  necromancer_active.json  necromancer_passive.json  psychic_active.json  psychic_passive.json  tank_active.json  tank_passive.json  thief_active.json  thief_passive.json  tinkerer_active.json  tinkerer_passive.json
gamedata/furniture/: furniture.json
gamedata/items/: items.json
gamedata/mutations/: all.json  body.json  ears.json  eyebrows.json  eyes.json  head.json  legs.json  mouth.json  tail.json  texture.json
mewgenicseditor/: cli.py  core.py  gamedata.py
mewgenicseditor/scripts/: abilities.py  furniture.py  items.py  mutations.py  rebuild.py
