[project]
name = "mewgenics-save-cli"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
mewgenics-save = "mewgenicseditor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mewgenicseditor", "mewgenicseditor.scripts"]
